apps/wordpress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      service: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:6.4-apache
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          volumeMounts:
            - name: wordpress-pvc
              mountPath: /var/www/html
      restartPolicy: Always
      volumes:
        - name: wordpress-pvc
          persistentVolumeClaim:
            claimName: wordpress-pvc
