apps/wordpress/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mysql
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      service: wordpress-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: wordpress-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          volumeMounts:
            - name: mysql-pvc
              mountPath: /var/lib/mysql
      restartPolicy: Always
      volumes:
        - name: mysql-pvc
          persistentVolumeClaim:
            claimName: wordpress-mysql-pvc
