apps/wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: apps
spec:
  ports:
    - name: wordpress
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    service: wordpress
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  namespace: apps
spec:
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    service: wordpress-mysql
  type: ClusterIP
