apps/wordpress/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wordpress.felipecisotto.com.br`)
      kind: Rule
      services:
        - name: wordpress
          port: 80
  tls:
    secretName: certificates
